--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -40,7 +40,7 @@ exec-once = $HOME/.config/waybar/live-reload
 exec-once = [workspace 1 silent] uwsm app -- firefox -P default --name  firefox-main
 exec-once = [workspace 2 silent] uwsm app -- kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] uwsm app -- obsidian
-exec = [workspace 4 silent] kitty zsh -lic "rmpc; exec zsh -i"
+exec-once = [workspace 4 silent] kitty zsh -lic "rmpc; exec zsh -i"
 exec-once = [workspace 5 silent] uwsm app -- dolphin
 
 # exec = [workspace 5 silent] $HOME/.local/bin/public/hyprland/autostart/music
