--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -6,6 +6,7 @@ bind = SUPER, S,        exec, hyprshot -zm region -o $HOME/Pictures/screenshots
 bind = SUPER, E,        exec, kitty zsh -lic "y; exec zsh -i"
 bind = SUPER, D,        exec, $HOME/.local/bin/public/menu/launch-kitty applications
 bind = SUPER, P,        exec, $HOME/.local/bin/public/menu/launch-kitty
+bind = SUPER, O,        exec, qutebrowser
 
 # System
 bind = SUPER SHIFT, I,     exec, $HOME/.local/bin/public/wallpaper/picker-menu
