--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ home/.config/zsh/.zcompdump
 home/.config/hypr/hypridle.conf
 home/.config/qutebrowser/__pycache__/
 home/.config/qutebrowser/user.css
+home/.config/qutebrowser/bookmarks/*
+*.sqlite
