update floating rules

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -11,6 +11,10 @@ source = ~/.config/hypr/modules/permissions.conf
 source = ~/.config/hypr/modules/monitors.conf
 source = ~/.config/hypr/modules/autostart.conf
 
+# monitor = eDP-1, 1920x1200@60, 0x0, 1.0
+# monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
+# monitor = desc:LG Electronics LG HDR 4K 0x00013533, 3840x2160@60, 1280x0, 1.6
+
 env = XDG_CURRENT_DESKTOP,Hyprland
 
 general { # https://wiki.hyprland.org/Configuring/Variables/#general
