--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -37,7 +37,8 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 # Waybar
 exec-once = $HOME/.config/waybar/live-reload
 
-exec-once = [workspace 1 silent] uwsm app -- firefox -P default --name  firefox-main
+# exec-once = [workspace 1 silent] uwsm app -- firefox -P default --name  firefox-main
+exec-once = [workspace 1 silent] uwsm app -- qutebrowser
 exec-once = [workspace 2 silent] uwsm app -- kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] uwsm app -- obsidian
 exec-once = [workspace 4 silent] kitty zsh -lic "rmpc; exec zsh -i"
