--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -28,24 +28,37 @@ windowrulev2 = tile, workspace:8
 windowrulev2 = tile, workspace:9
 windowrulev2 = tile, workspace:10
 
+
 # Generic
-# windowrulev2 = float, title:.*(Configure|Configuration|Settings|Preferences|Options|Properties|Control Panel|Inspector|Toolbox|Customize|Setup|Wizard|Manager|Panel).*
-# windowrulev2 = float, title:.*(Open|Open File|Open Folder|Open Directory|Browse|Browse Folder|File Browser|File Chooser|File Picker|Choose File|Choose Folder|Select|Select File|Select Folder|Select Directory|Save|Save As|Save File|Save Image|Save Changes|Export|Export As|Export File|Import|Import As|Import File|Upload|Upload File|File Upload|Download|Download File|Attach|Attachment|Add File|Add Folder|Choose Location|Select Location).*
-# windowrulev2 = float, title:.*(Rename|Move|Copy|Delete|Remove|New File|New Folder|Create|Add|Edit|Edit Item|Edit Rule|Edit Profile|Edit Preferences|Find|Find and Replace|Search|Replace|Go To|Jump To|Filter|Sort|Print|Print Preview|Page Setup|Color Picker|Colour Picker|Font|Font Selector|Choose Color|Select Color).*
-# windowrulev2 = float, title:.*(Login|Log In|Log On|Sign In|Sign-In|Sign in|Sign-On|Sign On|Sign Up|Sign-Up|Signup|Register|Registration|Create Account|Account Creation|Authentication Required|Re-authentication|Authenticate|Authorization Required|Password|Enter Password|Unlock|Security Key|Two-Factor Authentication|Two Step Verification|2FA|One-Time Password|OTP).*
-# windowrulev2 = float, title:.*(Confirm|Confirmation|Are You Sure|Warning|Caution|Error|Critical Error|Information|Info|Notice|Question|Alert|Attention|Success|Completed|Finished|Result|Results).*
-# windowrulev2 = float, title:.*(About|About .*|Help|Help Viewer|License|Licensing|Terms of Service|Privacy Policy|Report Bug|Send Feedback|Feedback|Tip of the Day|Welcome|First Run|Initial Setup|Quit|Exit|Close Application|Session Manager|Choose Workspace).*
-# windowrulev2 = float, title:.*(Copying|Moving|Deleting|Extracting|Compressing|Decompressing|Archiving|Unarchiving|Packing|Unpacking|Zipping|Unzipping|Downloading|Uploading|Transferring|Syncing|Synchronizing|Indexing|Scanning|Checking|Verifying|Applying Changes|Applying|Preparing|Calculating|Merging|Replacing|Overwriting|Restoring|Recovering|Cleaning Up|Updating|Installing|Uninstalling|Upgrading|Configuring).*
-# windowrulev2 = float, title:.*(File Operation Progress|File Transfer|File Copy|File Move|File Delete|File Delete Confirmation|File Operation|File Operations|File Activity|Transfer Progress|Copy Files|Move Files|Delete Files|Extract Files|Compress Files|Archive Manager).*
-# windowrulev2 = float, title:.*(File Conflict|Name Conflict|Replace File|Replace Files|Overwrite File|Overwrite Files|Confirm Overwrite|Confirm Replace|Confirm Delete|Confirm Move|Confirm Copy|Skip Files|Keep Both|Keep Newer).*
-# windowrulev2 = float, title:.*(Commit Changes|Commit|Push|Pull|Fetch|Merge|Rebase|Resolve Conflicts|Stash Changes|Apply Patch|Create Patch|Diff|Review Changes).*
-# windowrulev2 = float, title:.*(Iniciar sessão).*
-# windowrulev2 = float, title:.*(Library).*
-# windowrulev2 = float, title:.*(Choose Application).*
-# windowrulev2 = float, class:.*(m.py).*
+windowrulev2 = float, title:.*(Configure|Configuration|Settings|Preferences|Options|Properties|Control Panel|Inspector|Toolbox|Customize|Setup|Wizard|Manager|Panel).*
+windowrulev2 = size 900 700, title:.*(Configure|Configuration|Settings|Preferences|Options|Properties|Control Panel|Inspector|Toolbox|Customize|Setup|Wizard|Manager|Panel).*
+windowrulev2 = float, title:.*(Open|Open File|Open Folder|Open Directory|Browse|Browse Folder|File Browser|File Chooser|File Picker|Choose File|Choose Folder|Select|Select File|Select Folder|Select Directory|Save|Save As|Save File|Save Image|Save Changes|Export|Export As|Export File|Import|Import As|Import File|Upload|Upload File|File Upload|Download|Download File|Attach|Attachment|Add File|Add Folder|Choose Location|Select Location).*
+windowrulev2 = size 900 700, title:.*(Open|Open File|Open Folder|Open Directory|Browse|Browse Folder|File Browser|File Chooser|File Picker|Choose File|Choose Folder|Select|Select File|Select Folder|Select Directory|Save|Save As|Save File|Save Image|Save Changes|Export|Export As|Export File|Import|Import As|Import File|Upload|Upload File|File Upload|Download|Download File|Attach|Attachment|Add File|Add Folder|Choose Location|Select Location).*
+windowrulev2 = float, title:.*(Rename|Move|Copy|Delete|Remove|New File|New Folder|Create|Add|Edit|Edit Item|Edit Rule|Edit Profile|Edit Preferences|Find|Find and Replace|Search|Replace|Go To|Jump To|Filter|Sort|Print|Print Preview|Page Setup|Color Picker|Colour Picker|Font|Font Selector|Choose Color|Select Color).*
+windowrulev2 = size 900 700, title:.*(Rename|Move|Copy|Delete|Remove|New File|New Folder|Create|Add|Edit|Edit Item|Edit Rule|Edit Profile|Edit Preferences|Find|Find and Replace|Search|Replace|Go To|Jump To|Filter|Sort|Print|Print Preview|Page Setup|Color Picker|Colour Picker|Font|Font Selector|Choose Color|Select Color).*
+windowrulev2 = float, title:.*(Login|Log In|Log On|Sign In|Sign-In|Sign in|Sign-On|Sign On|Sign Up|Sign-Up|Signup|Register|Registration|Create Account|Account Creation|Authentication Required|Re-authentication|Authenticate|Authorization Required|Password|Enter Password|Unlock|Security Key|Two-Factor Authentication|Two Step Verification|2FA|One-Time Password|OTP).*
+windowrulev2 = size 900 700, title:.*(Login|Log In|Log On|Sign In|Sign-In|Sign in|Sign-On|Sign On|Sign Up|Sign-Up|Signup|Register|Registration|Create Account|Account Creation|Authentication Required|Re-authentication|Authenticate|Authorization Required|Password|Enter Password|Unlock|Security Key|Two-Factor Authentication|Two Step Verification|2FA|One-Time Password|OTP).*
+windowrulev2 = float, title:.*(Confirm|Confirmation|Are You Sure|Warning|Caution|Error|Critical Error|Information|Info|Notice|Question|Alert|Attention|Success|Completed|Finished|Result|Results).*
+windowrulev2 = size 900 700, title:.*(Confirm|Confirmation|Are You Sure|Warning|Caution|Error|Critical Error|Information|Info|Notice|Question|Alert|Attention|Success|Completed|Finished|Result|Results).*
+windowrulev2 = float, title:.*(About|About .*|Help|Help Viewer|License|Licensing|Terms of Service|Privacy Policy|Report Bug|Send Feedback|Feedback|Tip of the Day|Welcome|First Run|Initial Setup|Quit|Exit|Close Application|Session Manager|Choose Workspace).*
+windowrulev2 = size 900 700, title:.*(About|About .*|Help|Help Viewer|License|Licensing|Terms of Service|Privacy Policy|Report Bug|Send Feedback|Feedback|Tip of the Day|Welcome|First Run|Initial Setup|Quit|Exit|Close Application|Session Manager|Choose Workspace).*
+windowrulev2 = float, title:.*(Copying|Moving|Deleting|Extracting|Compressing|Decompressing|Archiving|Unarchiving|Packing|Unpacking|Zipping|Unzipping|Downloading|Uploading|Transferring|Syncing|Synchronizing|Indexing|Scanning|Checking|Verifying|Applying Changes|Applying|Preparing|Calculating|Merging|Replacing|Overwriting|Restoring|Recovering|Cleaning Up|Updating|Installing|Uninstalling|Upgrading|Configuring).*
+windowrulev2 = size 900 700, title:.*(Copying|Moving|Deleting|Extracting|Compressing|Decompressing|Archiving|Unarchiving|Packing|Unpacking|Zipping|Unzipping|Downloading|Uploading|Transferring|Syncing|Synchronizing|Indexing|Scanning|Checking|Verifying|Applying Changes|Applying|Preparing|Calculating|Merging|Replacing|Overwriting|Restoring|Recovering|Cleaning Up|Updating|Installing|Uninstalling|Upgrading|Configuring).*
+windowrulev2 = float, title:.*(File Operation Progress|File Transfer|File Copy|File Move|File Delete|File Delete Confirmation|File Operation|File Operations|File Activity|Transfer Progress|Copy Files|Move Files|Delete Files|Extract Files|Compress Files|Archive Manager).*
+windowrulev2 = size 900 700, title:.*(File Operation Progress|File Transfer|File Copy|File Move|File Delete|File Delete Confirmation|File Operation|File Operations|File Activity|Transfer Progress|Copy Files|Move Files|Delete Files|Extract Files|Compress Files|Archive Manager).*
+windowrulev2 = float, title:.*(File Conflict|Name Conflict|Replace File|Replace Files|Overwrite File|Overwrite Files|Confirm Overwrite|Confirm Replace|Confirm Delete|Confirm Move|Confirm Copy|Skip Files|Keep Both|Keep Newer).*
+windowrulev2 = size 900 700, title:.*(File Conflict|Name Conflict|Replace File|Replace Files|Overwrite File|Overwrite Files|Confirm Overwrite|Confirm Replace|Confirm Delete|Confirm Move|Confirm Copy|Skip Files|Keep Both|Keep Newer).*
+windowrulev2 = float, title:.*(Commit Changes|Commit|Push|Pull|Fetch|Merge|Rebase|Resolve Conflicts|Stash Changes|Apply Patch|Create Patch|Diff|Review Changes).*
+windowrulev2 = size 900 700, title:.*(Commit Changes|Commit|Push|Pull|Fetch|Merge|Rebase|Resolve Conflicts|Stash Changes|Apply Patch|Create Patch|Diff|Review Changes).*
+windowrulev2 = float, title:.*(Iniciar sessão).*
+windowrulev2 = size 900 700, title:.*(Iniciar sessão).*
+windowrulev2 = float, title:.*(Library).*
+windowrulev2 = size 900 700, title:.*(Library).*
+windowrulev2 = float, title:.*(Choose Application).*
+windowrulev2 = size 900 700, title:.*(Choose Application).*
 
 # Steam dialogs
-# windowrulev2 = center, class:^(steam)$, windowtype:^(dialog|popup)$
+windowrulev2 = center, class:^(steam)$, windowtype:^(dialog|popup)$
 windowrulev2 = workspace 8 silent, class:(?i)(.*steam.*)
 windowrulev2 = workspace 8 silent, class:(?i)(.*vrmonitor.*)
 
@@ -64,13 +77,12 @@ windowrulev2 = center, class:^(launcher)$
 windowrulev2 = noborder, class:^(launcher)$
 
 # Qemu
-# windowrulev2 = float, class:^(qemu)$
+windowrulev2 = tile, class:^(qemu)$
 windowrulev2 = size 1200 800, class:^(qemu)$
 
-# windowrulev2 = float, class:.*qBittorrent.*
-# windowrulev2 = float, class:.*(python3).*
+windowrulev2 = float, class:.*qBittorrent.*
 
-# windowrulev2 = float, class:.*(vlc).*
+windowrulev2 = float, class:.*(vlc).*
 windowrulev2 = tile, title:(.*VLC media player.*)
 
 # Mega
@@ -101,6 +113,29 @@ windowrulev2 = center,          class:^(google-chrome)$, title:(^X.*p$)
 windowrulev2 = opacity 0.9 0.6, class:^(google-chrome)$, title:(^X.*p$)
 windowrulev2 = noshadow,        class:^(google-chrome)$, title:(^X.*p$)
 
+# Attempt to fix conky blur
+# windowrulev2 = opacity 1.0 override 1.0 override, class:^(kitty)$
+# windowrulev2 = noblur, class:^(kitty)$
+
+
+workspace = 4, persistent:true
+
+windowrulev2 = idleinhibit focus, class:^(mpv)$
+windowrulev2 = idleinhibit focus, class:^(zoom)$
+windowrulev2 = idleinhibit focus, title:^.*Meet.*$
+windowrulev2 = idleinhibit focus, title:^.*YouTube.*$
+
+# qute
+windowrulev2 = focusonactivate 0, class:(.*qutebrowser.*)
+windowrulev2 = float, class:^(qute-editor)$
+windowrulev2 = size 900 600, class:^(qute-editor)$
+windowrulev2 = center, class:^(qute-editor)$
+windowrulev2 = stayfocused, class:^(qute-editor)$
+
+# yazi
+windowrulev2 = float, class:^(floating-yazi)$
+windowrulev2 = size 900 700, class:^(floating-yazi)$
+windowrulev2 = center, class:^(floating-yazi)$
 
 # Tile
 windowrulev2 = tile, class:(.*firefox-main.*)
@@ -109,24 +144,5 @@ windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Copying|Moving|Deleting|.
 windowrulev2 = tile, class:(.*obsidian.*)
 windowrulev2 = tile, class:(.*kitty.*)
 windowrulev2 = tile, class:(.*main.*) # kitty
-windowrulev2 = tile, class:(.*qutebrowser.*) # kitty
-
-# Attempt to fix conky blur
-# windowrulev2 = opacity 1.0 override 1.0 override, class:^(kitty)$
-# windowrulev2 = noblur, class:^(kitty)$
-
-
-# Rules for the layout on Workspace 4
-# windowrulev2 = workspace 4, class:^(kitty-.*)$
-# windowrulev2 = float, class:^(kitty-btop)$
-# windowrulev2 = float, class:^(kitty-zsh)$
-# windowrulev2 = float, class:^(kitty-cava)$
-# windowrulev2 = float, class:^(kitty-rmpc)$
-# windowrulev2 = float, class:^(kitty-viu)$
-
-workspace = 4, persistent:true
-
-windowrulev2 = idleinhibit focus, class:^(mpv)$
-windowrulev2 = idleinhibit focus, class:^(zoom)$
-windowrulev2 = idleinhibit focus, title:^.*Meet.*$
-windowrulev2 = idleinhibit focus, title:^.*YouTube.*$
+windowrulev2 = tile, class:.*(im.py).*
+windowrulev2 = tile, class:(.*qutebrowser.*)
