--- a/home/.config/hypr/modules/hosts/thinkpad.conf
+++ b/home/.config/hypr/modules/hosts/thinkpad.conf
@@ -1,15 +1,18 @@
-workspace = 1, monitor:HDMI-A-1, persistent:true, gapsin:2, gapsout:15, bordersize:2, rounding:4, shadow:0
-workspace = 2, monitor:HDMI-A-1, persistent:true, gapsin:2, gapsout:15, bordersize:2, rounding:4, shadow:0
-workspace = 3, monitor:HDMI-A-1, persistent:true, gapsin:2, gapsout:15, bordersize:2, rounding:4, shadow:0
-workspace = 4, monitor:HDMI-A-1, persistent:true, gapsin:2, gapsout:15, bordersize:2, rounding:4, shadow:0
-workspace = 5, monitor:HDMI-A-1, persistent:true, gapsin:2, gapsout:15, bordersize:2, rounding:4, shadow:0
+workspace = 1, monitor:HDMI-A-1, persistent:true
+workspace = 2, monitor:HDMI-A-1, persistent:true
+workspace = 3, monitor:HDMI-A-1, persistent:true
 
-workspace = 6, monitor:eDP-1, persistent:true
-workspace = 7, monitor:eDP-1, persistent:true
-workspace = 8, monitor:eDP-1, persistent:true, gapsin:6, gapsout:17
-workspace = 9, monitor:eDP-1, persistent:true, gapsin:6, gapsout:17
-workspace = 10,monitor:eDP-1, persistent:true, gapsin:6, gapsout:17
+workspace = 4, monitor:eDP-1,    persistent:true
+workspace = 5, monitor:eDP-1,    persistent:true
+workspace = 6, monitor:eDP-1,    persistent:true
+workspace = 7, monitor:eDP-1,    persistent:true
+workspace = 8, monitor:eDP-1,    persistent:true
+workspace = 9, monitor:eDP-1,    persistent:true
+workspace = 10,monitor:eDP-1,    persistent:true
 
-windowrulev2 = bordercolor rgb(808080) rgb(F5F5F5), workspace:1-5
-windowrulev2 = noanim, workspace:1-5
-windowrulev2 = noblur, workspace:1-5
+# exec = for i in {1..3}; do hyprctl dispatch moveworkspacetomonitor $i HDMI-A-1; done
+# exec = for i in {4..10}; do hyprctl dispatch moveworkspacetomonitor $i DP-1; done
+
+# windowrulev2 = bordercolor rgb(808080) rgb(F5F5F5), workspace:1-5
+# windowrulev2 = noanim, workspace:1-5
+# windowrulev2 = noblur, workspace:1-5
