--- a/home/.config/kanshi/config
+++ b/home/.config/kanshi/config
@@ -1,75 +1,58 @@
 output "DSC Paperlike13K 0x00003400" {
   mode 3200x2400@37.001Hz
-  scale 2.0
+  scale 2.5
   alias $EINK
 }
 
  output "LG Electronics LG HDR 4K 0x00013533" {
   mode 3840x2160@59.997Hz
-  scale 1.6
+  scale 1.5
   alias $LG
 }
 
 output "TV" {
 	mode 4096x2160@59.94Hz
-	scale 2.2
+	scale 2
 	alias $TV
 }
 
 output "Thinkpad Monitor" {
   mode 1920x1200@60Hz
-  scale 1.0
+  scale 1.2
   alias $thinkpad
 }
 
-profile thinkpad_default {
-  output eDP-1 mode 1920x1200@60Hz scale 1.2
+# Home
 
-  exec $HOME/.local/bin/public/monitors/bin/set-profile thinkpad_default thinkpad
+profile homepc {
+  output $EINK enable position 0,720
+  output $LG enable transform 90 position 1280,0
 }
 
-profile thinkpad_with_eink {
-  output "DSC Paperlike13K 0x00003400" enable mode 3200x2400@37.001Hz scale 2.0 position 0,720
-  output eDP-1 mode 1920x1200@60Hz scale 1.2
-
-  exec $HOME/.local/bin/public/monitors/bin/set-profile thinkpad_with_eink thinkpad,eink
+profile homepc_eink {
+  output $EINK enable
 }
 
-profile home_rotated {
-  output "DSC Paperlike13K 0x00003400" enable mode 3200x2400@37.001Hz scale 2.0 position 0,720
-  output "LG Electronics LG HDR 4K 0x00013533" enable mode 3840x2160@59.997Hz scale 1.6 transform 90 position 1280,0
-
-  # output $EINK position 1280,0
-  # output $LG transform 90 position 0,720
-
-  exec $HOME/.local/bin/public/monitors/bin/set-profile home_rotated lg,eink
-}
-
-profile home {
-  output "DSC Paperlike13K 0x00003400" enable mode 3200x2400@37.001Hz scale 2.5 position 0,195
-  output "LG Electronics LG HDR 4K 0x00013533" enable mode 3840x2160@59.997Hz scale 1.6 position 1280,0 transform normal
-
-  exec $HOME/.local/bin/public/monitors/bin/set-profile home lg,eink
-}
-
-profile home_eink_only {
-  output $EINK
-
-  exec $HOME/.local/bin/public/monitors/bin/set-profile home_eink_only eink
-}
-
-profile home_lg_only {
-  output $LG enable transform normal
-
-  exec $HOME/.local/bin/public/monitors/bin/set-profile home_lg_only lg
-}
-
-profile home_lg_only_rotated {
+profile homepc_lg_rotated {
   output $LG enable transform 90
-
-  exec $HOME/.local/bin/public/monitors/bin/set-profile home_lg_only lg
 }
 
+profile homepc_lg {
+  output $LG enable transform normal
+}
+
+# Thinkpad
+
+profile thinkpad {
+  output $thinkpad enable
+}
+
+profile thinkpad_eink {
+  output $EINK enable position 0,720
+  output $thinkpad enable
+}
+
+ # TV
 profile home_tv {
 	output $TV enable
 }
