--- a/home/.config/waybar/modules/custom.jsonc
+++ b/home/.config/waybar/modules/custom.jsonc
@@ -27,19 +27,19 @@
   "custom/date_neuro": {
     "exec": "$HOME/.local/bin/public/waybar/date-time neuro",
     "interval": 60,
-    "escape": false,
+    "escape": false
   },
 
   "custom/date_month": {
     "exec": "$HOME/.local/bin/public/waybar/date-time month",
     "interval": 60,
-    "escape": false,
+    "escape": false
   },
 
   "custom/date_time": {
     "exec": "$HOME/.local/bin/public/waybar/date-time time",
     "interval": 60,
-    "escape": false,
+    "escape": false
   },
 
   "custom/lock_screen": {
@@ -125,5 +125,51 @@
     "format": "⏻",
     "tooltip": false,
     "on-click": "~/.local/bin/public/menu/launch-kitty power-management"
-}
+  },
+  "hyprland/workspaces#main": {
+    "disable-scroll": false,
+    "on-scroll-up": "hyprctl dispatch workspace -1",
+    "on-scroll-down": "hyprctl dispatch workspace +1",
+
+    "active-only": false,
+    "persisted-only": false,
+    "all-outputs": false,
+
+    "format": "{icon}",
+    "format-icons": {
+      "active": "",
+      "urgent": "",
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "10": "10"
+    },
+
+    // "persistent-workspaces": {
+    //   "HDMI-A-1": [1,2,3],
+    //   "DP-1": [4,5,6,7,8,9,10],
+    //   "eDP-1": [4,5,6,7,8,9,10],
+    // }
+  },
+
+  "hyprland/workspaces#eink": {
+    "active-only": false,
+    "persisted-only": true,
+    "all-outputs": false,
+    "output": "HDMI-A-1",
+    "format": "{icon}",
+    "on-scroll-up": "hyprctl dispatch workspace -1",
+    "on-scroll-down": "hyprctl dispatch workspace +1",
+    // "persistent-workspaces": {
+    //   "HDMI-A-1": [1,2,3],
+    //   "DP-1": [4,5,6,7,8,9,10],
+    //   "eDP-1": [4,5,6,7,8,9,10],
+    // }
+  }
 }
