fix configs for thinkpad

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -11,10 +11,6 @@ source = ~/.config/hypr/modules/permissions.conf
 source = ~/.config/hypr/modules/monitors.conf
 source = ~/.config/hypr/modules/autostart.conf
 
-# monitor = eDP-1, 1920x1200@60, 0x0, 1.0
-# monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
-# monitor = desc:LG Electronics LG HDR 4K 0x00013533, 3840x2160@60, 1280x0, 1.6
-
 env = XDG_CURRENT_DESKTOP,Hyprland
 
 general { # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -44,10 +40,11 @@ general { # https://wiki.hyprland.org/Configuring/Variables/#general
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 # hyprctl -j devices | jq '.keyboards[] | {name,xkb_active_layout_name,xkb_layout_names}'
+# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 input {
   follow_mouse = 1
-  # float_switch_override_focus = 0
 	resolve_binds_by_sym = true
+  # float_switch_override_focus = 0
 
   kb_layout  = us,ru
 
