--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -2,30 +2,20 @@
 # exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprsunset
-
-# save some battery
+exec-once = kanshi reload
+exec-once = $HOME/.local/bin/public/hyprland/hypridle
+exec-once = kbuildsycoca6 # Dolphin file association
 
 exec-once = $HOME/.local/bin/public/color-mode/dark-mode skip-notification
 exec-once = $HOME/.local/bin/public/battery-status
 exec-once = $HOME/.local/bin/public/kitty-background-listener
-exec-once = $HOME/.local/bin/public/hardware/mount-drives
 
-# Lock
-exec-once = $HOME/.local/bin/public/hyprland/hypridle-wrapper
-
-# Disabled
 # exec-once = libinput-gestures
-
-# Monitors
-exec-once = kanshi reload
 
 exec = $HOME/.local/bin/public/hyprland/load-host-config
 exec = $HOME/.local/bin/public/hyprland/set-thinkpad-settings
 exec = $HOME/.local/bin/public/hyprland/set-homepc-settings
 exec = $HOME/.local/bin/public/hyprland/check-eink
-
-# Dolphin file association
-exec-once = kbuildsycoca6
 
 # Walppaper and colors
 exec-once = pkill -x swww-daemon; swww-daemon & disown
@@ -43,6 +33,5 @@ exec-once = [workspace 1 silent] uwsm app -- qutebrowser
 exec-once = [workspace 2 silent] uwsm app -- kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] uwsm app -- obsidian
 exec-once = [workspace 4 silent] kitty zsh -lic "rmpc; exec zsh -i"
-exec-once = [workspace 5 silent] uwsm app -- dolphin
 
 # exec = [workspace 5 silent] $HOME/.local/bin/public/hyprland/autostart/music
