--- a/home/.config/hypr/modules/monitors.conf
+++ b/home/.config/hypr/modules/monitors.conf
@@ -4,11 +4,7 @@
 
 # https://wiki.hyprland.org/Configuring/Monitors/
 
-# Virtual monitor for  VR 120hz:
-# exec-once = hyprctl output create headless HEADLESS-1
-# monitor=HEADLESS-1, 3200x2400@120, -1920x0, 1.5
+# monitor = eDP-1, 1920x1200@60, 0x0, 1.0
+# monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
+# monitor = desc:LG Electronics LG HDR 4K 0x00013533, 3840x2160@60, 1280x0, 1.6
 
-# Pre kanshi configuration
-# monitor=HDMI-A-1, 3200x2400@36.00Hz,0x0, 2
-# monitor=DP-1,     3840x2160@59.99700,1600x-800, 1.6
-# monitor=HDMI-A-1, 4096x2160@59.94Hz,0x0, auto # TV
