--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -5,6 +5,10 @@ exec-once = hyprsunset
 exec-once = kanshi reload
 exec-once = $HOME/.local/bin/public/hyprland/hypridle
 exec-once = kbuildsycoca6 # Dolphin file association
+exec-once = mpDris2 # mpd helper for playerctl
+
+# sync password on change (cron job pulls every 5 mins)
+exec-once = $HOME/.local/bin/public/pass/git-watcher-push
 
 exec-once = $HOME/.local/bin/public/color-mode/dark-mode skip-notification
 exec-once = $HOME/.local/bin/public/battery-status
