--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -129,17 +129,17 @@ listen_on unix:/tmp/kitty
 
 detect_urls yes
 
-protocol file
-mime inode/directory
-action launch --type=background dolphin $FILE_PATH
-
-protocol file
-mime text/*
-action launch --type=overlay $EDITOR $FILE_PATH
-
-protocol file
-mime video/*
-action launch --type=overlay mpv $FILE_PATH
+# protocol file
+# mime inode/directory
+# action launch --type=background dolphin $FILE_PATH
+#
+# protocol file
+# mime text/*
+# action launch --type=overlay $EDITOR $FILE_PATH
+#
+# protocol file
+# mime video/*
+# action launch --type=overlay mpv $FILE_PATH
 
 include /home/wh1le/.cache/wal/colors-kitty.conf
 
