--- a/home/.config/qutebrowser/autoconfig.yml
+++ b/home/.config/qutebrowser/autoconfig.yml
@@ -8,3 +8,7 @@ config_version: 2
 settings:
   content.javascript.clipboard:
     https://claude.ai: access-paste
+  content.notifications.enabled:
+    https://mail.proton.me: false
+  content.register_protocol_handler:
+    https://mail.proton.me#mailto=%25s: false
