Remove git from home manager, password sync
* gpg config, mpd packages, pass

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 result
 *.qcow2
 nix/secrets.nix
+
+# Block all GPG private keys
+*.key
+*.asc
+**/private-keys-v1.d/**
+**/openpgp-revocs.d/**
+**/*secring*
+**/*secret*
+*.gpg
+*.kbx
