better file navigation (zsh hotkey is broken)

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -48,7 +48,11 @@ bind-key -n M-0 select-window -t 10
 source-file ~/.config/tmux/smart_pane_switching.conf
 # source-file ~/.cache/wal/colors-tmux.conf
 
-bind-key -r -T prefix f new-window -n sessionizer "zsh -c 'source ~/.zprofile && ~/.local/bin/public/tmux-sessionizer'"
+# thanks primeagain
+# bind-key -n C-f last-session
+# bind-key -r -T prefix f new-window -n sessionizer "zsh -c 'source ~/.zprofile && ~/.local/bin/public/tmux-sessionizer'"
+bind-key -n C-f new-window -n sessionizer "zsh -c 'source ~/.zprofile && ~/.local/bin/public/tmux-sessionizer'"
+bind-key -n C-s switch-client -l
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
