add wallpaper picker

--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -9,7 +9,7 @@ bind = SUPER, P,        exec, $HOME/.local/bin/public/menu/launch-kitty
 bind = SUPER, O,        exec, qutebrowser
 
 # System
-bind = SUPER SHIFT, I,     exec, $HOME/.local/bin/public/wallpaper/picker-menu
+bind = SUPER SHIFT, I,     exec, $HOME/.local/bin/public/menu/launch-kitty wallpaper
 bind = SUPER, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
 # Example keybind in hyprland.conf
 bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
