--- a/home/.config/btop/btop.conf
+++ b/home/.config/btop/btop.conf
@@ -2,7 +2,7 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/nix/store/7jpih1ivs7v9xzqcic7bvj76bdrdjza5-btop-1.4.5/share/btop/themes/dusklight.theme"
+color_theme = "TTY"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = False
