use current wallpaper for lock screen

--- a/home/.config/hypr/hypridle/hypridle-thinkpad.conf
+++ b/home/.config/hypr/hypridle/hypridle-thinkpad.conf
@@ -18,5 +18,5 @@ listener {
 listener {
   timeout = 600
 	on-timeout = systemctl suspend-then-hibernate
-  on-resume = $HOME/.local/bin/public/wallpaper/refresh-current-wallpapers
+  on-resume = $HOME/.current_wallpaper
 }
