--- a/home/.config/hypr/modules/hosts/homepc.conf
+++ b/home/.config/hypr/modules/hosts/homepc.conf
@@ -1,14 +1,13 @@
-workspace = 1, monitor:HDMI-A-1, persistent:true
-workspace = 2, monitor:HDMI-A-1, persistent:true
-workspace = 3, monitor:HDMI-A-1, persistent:true
-
-workspace = 4, monitor:dp-1, persistent:true
-workspace = 5, monitor:dp-1, persistent:true
-workspace = 6, monitor:dp-1, persistent:true
-workspace = 7, monitor:dp-1, persistent:true
-workspace = 8, monitor:dp-1, persistent:true
-workspace = 9, monitor:dp-1, persistent:true
-workspace = 10,monitor:dp-1, persistent:true
+workspace = 1, monitor:desc:DSC Paperlike13K 0x00003400, persistent:true
+workspace = 2, monitor:desc:DSC Paperlike13K 0x00003400, persistent:true
+workspace = 3, monitor:desc:DSC Paperlike13K 0x00003400, persistent:true
+workspace = 4, monitor:DP-1, persistent:true
+workspace = 5, monitor:DP-1, persistent:true
+workspace = 6, monitor:DP-1, persistent:true
+workspace = 7, monitor:DP-1, persistent:true
+workspace = 8, monitor:DP-1, persistent:true
+workspace = 9, monitor:DP-1, persistent:true
+workspace = 10, monitor:DP-1, persistent:true
 
 # exec = for i in {1..3}; do hyprctl dispatch moveworkspacetomonitor $i HDMI-A-1; done
 # exec = for i in {4..10}; do hyprctl dispatch moveworkspacetomonitor $i DP-1; done
