--- a/home/.config/hypr/modules/monitors.conf
+++ b/home/.config/hypr/modules/monitors.conf
@@ -8,3 +8,9 @@
 # monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
 # monitor = desc:LG Electronics LG HDR 4K 0x00013533, 3840x2160@60, 1280x0, 1.6
 
+monitor = , preferred, auto, 1
+
+monitor = DP-1, addreserved, 900, 500, 0, 0
+
+# Mirroring
+# monitor = , preferred, auto, 1, mirror, DP-1
