--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -1,34 +1,35 @@
-# set -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",screen-256color*:Tc"
+source-file ~/.config/tmux/smart_pane_switching.conf
 
+# Settings
 set -g default-terminal "tmux-256color"
-# set -g default-terminal "xtmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-
 set -sg escape-time 0
 set -g base-index 1
 set -g status-justify centre
 set -g status-position top
 set -g aggressive-resize off
-
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+set-option -g history-limit 50000
 set -g mouse on
-
+set -s exit-empty on
+set -g status-interval 5
+set -g status-position top
 set-window-option -g mode-keys vi
 
+# Binds
+unbind C-b
+unbind -T prefix f
+set -g prefix C-Space
+bind C-Space send-prefix
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
-
-# Splits in the same directory
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
 bind -r ^ last-window
 bind-key q kill-pane
-
+bind-key v capture-pane -b temp -S - \; save-buffer -b temp /tmp/tmux-buffer \; new-window "nvim +$ /tmp/tmux-buffer" \; delete-buffer -b temp
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
 bind-key -n M-3 select-window -t 3
@@ -39,64 +40,18 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 bind-key -n M-0 select-window -t 10
-
-# bind -n C-h select-pane -L
-# bind -n C-j select-pane -D
-# bind -n C-k select-pane -U
-# bind -n C-l select-pane -R
-
-source-file ~/.config/tmux/smart_pane_switching.conf
-# source-file ~/.cache/wal/colors-tmux.conf
-
-# thanks primeagain
-# bind-key -n C-f last-session
-# bind-key -r -T prefix f new-window -n sessionizer "zsh -c 'source ~/.zprofile && ~/.local/bin/public/tmux-sessionizer'"
-bind-key -n C-f new-window -n sessionizer "zsh -c 'source ~/.zprofile && ~/.local/bin/public/tmux-sessionizer'"
+bind-key -n C-f new-window -n sessionizer "zsh -c 'source ~/.zprofile && ~/.local/bin/public/tmux-sessionizer'" # thanks primeagain
 bind-key -n C-s switch-client -l
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
-# bind -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel 'wl-copy'
 
-# Attempt to fix power off functionality
-# set -g destroy-unattached on
-set -s exit-empty on
-
-set -g status-right '#(git -C "#{pane_current_path}" branch --show-current 2>/dev/null | sed "s/.*/  & /")'
-
-set -g status-interval 5
-
-set -g status-position top
-
-# set -g status-left " 󰊠 #S"
-# set -g window-style "fg=#{@foreground},bg=#{@background}"
-# set -g status-style "fg=#{@foreground},bg=#{@base00}"
-# set -g window-status-style "fg=#{@foreground},bold"
-# set -g window-status-current-style "fg=#{@background},bg=#{@base02},bold"
-# set -g pane-border-style "fg=#{@base08}"
-# set -g pane-active-border-style "fg=#{@cursor}"
-
+# Formatting
 set -g status-left " 󰊠 #S "
-set -g status-left-style "fg=color1,bold"
-set -g window-style "fg=color7,bg=color0"
-set -g status-style "fg=color7,bg=color0"
-set -g window-status-style "fg=color7,bold"
-set -g window-status-current-style "fg=color0,bg=color1,bold"
-set -g pane-border-style "fg=color8"
-set -g pane-active-border-style "fg=color1"
-set -g status-right-style "fg=color1,bold"
-# set -g status-left " 󰊠 #S"
-# set -g window-style "fg=white,bg=black"
-# set -g status-style "fg=white,bg=black"
-# set -g window-status-style "fg=white,bold"
-# set -g window-status-current-style "fg=black,bg=white,bold"
-# set -g pane-border-style "fg=brightblack"
-# set -g pane-active-border-style "fg=white"
+set -g status-right '#(git -C "#{pane_current_path}" branch --show-current 2>/dev/null | sed "s/.*/  & /")'
+set -g window-status-format "#I:#W#F"
+set -g window-status-current-format "#I:#W#F"
 
-set-option -g history-limit 50000
-bind-key v capture-pane -b temp -S - \; save-buffer -b temp /tmp/tmux-buffer \; new-window "nvim +$ /tmp/tmux-buffer" \; delete-buffer -b temp
-
-set -g allow-passthrough on
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
+# Colors
+run-shell "~/.config/tmux/scripts/set_colors.sh"
