--- a/home/.config/kanshi/config
+++ b/home/.config/kanshi/config
@@ -31,28 +31,40 @@ profile homepc {
 
 profile homepc_eink {
   output $EINK enable
+
+  exec $HOME/.local/bin/public/monitors/kanshi
 }
 
 profile homepc_lg_rotated {
   output $LG enable transform 90
+
+  exec $HOME/.local/bin/public/monitors/kanshi
 }
 
 profile homepc_lg {
   output $LG enable transform normal
+
+  exec $HOME/.local/bin/public/monitors/kanshi
 }
 
 # Thinkpad
 
 profile thinkpad {
   output $THINKPAD enable
+
+  exec $HOME/.local/bin/public/monitors/kanshi
 }
 
 profile thinkpad_eink {
   output $EINK enable position 0,720
   output $THINKPAD enable
+
+  exec $HOME/.local/bin/public/monitors/kanshi
 }
 
  # TV
 profile home_tv {
 	output $TV enable
+
+  exec $HOME/.local/bin/public/monitors/kanshi
 }
