--- a/home/.config/waybar/modules/custom.jsonc
+++ b/home/.config/waybar/modules/custom.jsonc
@@ -178,18 +178,63 @@
     // }
   },
 
-  "hyprland/workspaces#eink": {
-    "active-only": false,
-    "persisted-only": true,
+  "hyprland/workspaces#homepc": {
+    "format": "{icon}",
+    "format-icons": {
+      "active": "",
+      "urgent": "",
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "10": "10"
+    },
+
+    "active-only": true,
     "all-outputs": false,
-    "output": "HDMI-A-1",
+    "persisted-only": true,
     "format": "{icon}",
     "on-scroll-up": "hyprctl dispatch workspace -1",
     "on-scroll-down": "hyprctl dispatch workspace +1",
-    // "persistent-workspaces": {
-    //   "HDMI-A-1": [1,2,3],
-    //   "DP-1": [4,5,6,7,8,9,10],
-    //   "eDP-1": [4,5,6,7,8,9,10],
-    // }
+
+    "persistent-workspaces": {
+      "HDMI-A-1": [1,2,3],
+      "DP-1": [4,5,6,7,8,9,10],
+    }
+  },
+
+  "hyprland/workspaces#thinkpad": {
+    "format": "{icon}",
+    "format-icons": {
+      "active": "",
+      "urgent": "",
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "10": "10"
+    },
+
+    "active-only": true,
+    "all-outputs": false,
+    "persisted-only": true,
+    "format": "{icon}",
+    "on-scroll-up": "hyprctl dispatch workspace -1",
+    "on-scroll-down": "hyprctl dispatch workspace +1",
+
+    "persistent-workspaces": {
+      "HDMI-A-1": [1,2,3],
+      "eDP-1": [4,5,6,7,8,9,10],
+    }
   }
 }
