--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -26,8 +26,8 @@ general { # https://wiki.hyprland.org/Configuring/Variables/#general
   # col.active_border = rgba(0xff${border_active2}) rgba(0xff${border_active1}) 45deg
   # col.inactive_border = rgba(0xff${border_inactive})
   col.active_border = $border_active1 $border_active2 45deg
-  col.inactive_border = $border_inactive
-
+  # col.inactive_border = $border_inactive
+  col.inactive_border = rgba(e0e0e099)
 
   # Set to true enable resizing windows by clicking and dragging on borders and gaps
   resize_on_border = true
