--- a/home/.config/hypr/modules/monitors.conf
+++ b/home/.config/hypr/modules/monitors.conf
@@ -10,7 +10,7 @@
 
 monitor = , preferred, auto, 1
 
-monitor = DP-1, addreserved, 900, 500, 0, 0
+# monitor = DP-1, addreserved, 900, 500, 0, 0
 
 # Mirroring
 # monitor = , preferred, auto, 1, mirror, DP-1
