--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -15,8 +15,6 @@
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-windowrulev2 = focusonactivate, class:.*
-
 windowrulev2 = tile, workspace:1
 windowrulev2 = tile, workspace:2
 windowrulev2 = tile, workspace:3
@@ -74,7 +72,7 @@ windowrule = suppressevent maximize, class:.*
 # windowrulev2 = float, class:^(launcher)$
 windowrulev2 = size 400 300, class:^(launcher)$
 windowrulev2 = center, class:^(launcher)$
-windowrulev2 = noborder, class:^(launcher)$
+windowrulev2 = bordersize 2, class:^(launcher)$, monitor:HDMI-A-1
 
 # Qemu
 windowrulev2 = tile, class:^(qemu)$
